tket/tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_helios_codegen@pre-mem2reg@llvm21_9.snap
---
source: tket/tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i64, { i1, i64, i1 } } @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  %"0" = alloca i64, align 8
  %"1" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  %"4_1" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  store i64 %"2_01", ptr %"6_0", align 4
  %"6_02" = load i64, ptr %"6_0", align 4
  %lazy_measure = call i64 @___lazy_measure(i64 %"6_02"), !dbg !13
  call void @___reset(i64 %"6_02"), !dbg !13
  store i64 %"6_02", ptr %"8_0", align 4, !dbg !13
  store i64 %lazy_measure, ptr %"8_1", align 4, !dbg !13
  %"8_13" = load i64, ptr %"8_1", align 4
  %1 = insertvalue { i1, i64, i1 } { i1 true, i64 poison, i1 poison }, i64 %"8_13", 1
  store { i1, i64, i1 } %1, ptr %"9_0", align 4
  %"8_04" = load i64, ptr %"8_0", align 4
  %"9_05" = load { i1, i64, i1 }, ptr %"9_0", align 4
  store i64 %"8_04", ptr %"4_0", align 4
  store { i1, i64, i1 } %"9_05", ptr %"4_1", align 4
  %"4_06" = load i64, ptr %"4_0", align 4
  %"4_17" = load { i1, i64, i1 }, ptr %"4_1", align 4
  store i64 %"4_06", ptr %"0", align 4
  store { i1, i64, i1 } %"4_17", ptr %"1", align 4
  %"08" = load i64, ptr %"0", align 4
  %"19" = load { i1, i64, i1 }, ptr %"1", align 4
  %mrv = insertvalue { i64, { i1, i64, i1 } } poison, i64 %"08", 0
  %mrv10 = insertvalue { i64, { i1, i64, i1 } } %mrv, { i1, i64, i1 } %"19", 1
  ret { i64, { i1, i64, i1 } } %mrv10
}

declare i64 @___lazy_measure(i64)

declare void @___reset(i64)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i64, { i1, i64, i1 } }", file: !2, size: 128, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, i64, i1 }", file: !2, size: 64, align: 8, elements: !11)
!11 = !{!12, !9, !12}
!12 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!13 = !DILocation(line: 27062, column: 402, scope: !3)
